--- a/public/client/views/admin/try.view.html
+++ b/public/client/views/admin/try.view.html
@@ -2,6 +2,12 @@
 <div style="margin-top: 100px">
     <a ng-click="model.sendMail()"
        class="btn btn-primary btn-block">Login</a>
+
+
+    <a ng-click="model.testExport()"
+       class="btn btn-primary btn-block">export</a>
+
+
 </div>
 
 
