--- a/public/client/views/admin/partnerList.view.html
+++ b/public/client/views/admin/partnerList.view.html
@@ -1,6 +1,6 @@
+<div  ng-controller="PartnerListController as model">
 
-
-<div id="content">
+<div id="content" >
     <div id="mainBox" class="textBox">
         <div id="mainMenuBar">
             <a href="#/admin/{{model.aid}}/adminPartnerListInProgress" class="btn btn-primary ">In Progress</a>
@@ -10,28 +10,14 @@
     </div>
 </div>
 
-
 <div class="container-fluid" style="margin-top: 100px">
 
     <div class="col-md-2 right-line1">
         <ul class="list-group">
-            <!--<li class="list-group-item active">-->
-                <!--<a style="color: white" href="#/admin/1/adminPartnerList/1">Cras justo odio</a>-->
-            <!--</li>-->
-            <!--<li class="list-group-item">-->
-                <!--<a href="#/admin/1/adminPartnerList/1">Dapibus ac facilisis in</a>-->
-            <!--</li>-->
-            <!--<li class="list-group-item">-->
-                <!--<a href="#/admin/1/adminPartnerList/1">Morbi leo risus</a>-->
-            <!--</li>-->
-            <!--<li class="list-group-item">-->
-                <!--<a href="#/admin/1/adminPartnerList/1">Porta ac consectetur ac</a>-->
-            <!--</li>-->
-            <!--<li class="list-group-item">-->
-                <!--<a href="#/admin/1/adminPartnerList/1">Vestibulum at eros</a>-->
-            <!--</li>-->
+
             <li  ng-repeat="partner in model.partners" class="list-group-item">
                 <a  href="#/admin/{{model.aid}}/adminPartnerList/{{partner._id}}">{{partner.name}}</a>
+                <!--<a  href="'client/views/admin/adminPartnerSpecificProposal.view.html'">{{partner.name}}</a>-->
             </li>
         </ul>
 
@@ -48,4 +34,5 @@
     </div>
 
 
+</div>
 </div>
