--- a/public/client/views/header/header.view.html
+++ b/public/client/views/header/header.view.html
@@ -18,9 +18,68 @@
             <i class="fa fa-sign-in" aria-hidden="true"> Log in</i></a>
         </li>
 
-        <li ng-show = "currentUser">
-            <a href="#/home" ng-click="model.logout()">
-                <i class="fa fa-sign-out" aria-hidden="true"> Log out</i></a>
+        <li class="nav-item dropdown"  ng-show = "currentUser">
+            <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-fw fa-bell"></i>
+                <span class="d-lg-none">Alerts
+              <span class="badge badge-pill badge-warning">{{currentUser.alerts.length}} New</span>
+            </span>
+                <span class="indicator text-warning d-none d-lg-block">
+              <i class="fa fa-fw fa-circle"></i>
+            </span>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="alertsDropdown">
+                <h6 class="dropdown-header">Notification Alerts:</h6>
+
+
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item">
+              <span class="text-success">
+                <strong>
+                  <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
+              </span>
+                    <span class="small float-right text-muted">11:21 AM</span>
+                    <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
+                </a>
+
+
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item">
+              <span class="text-danger">
+                <strong>
+                  <i class="fa fa-long-arrow-down fa-fw"></i>Status Update</strong>
+              </span>
+                    <span class="small float-right text-muted">11:21 AM</span>
+                    <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
+                </a>
+
+
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" >
+              <span class="text-success">
+                <strong>
+                  <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
+              </span>
+                    <span class="small float-right text-muted">11:21 AM</span>
+                    <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
+                </a>
+
+
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item small" >View all alerts</a>
+            </div>
+        </li>
+
+        <li>
+
+        <li ng-show = "currentUser" class="nav-item">
+            <a href="#/passwordChange" ng-click="model.logout()">
+                <i class="fa fa-key" aria-hidden="true"> Change Password</i></a>
+        </li>
+
+        <li ng-show = "currentUser" class="nav-item">
+            <a class="nav-link" href="#/home" ng-click="model.logout()">
+                <i class="fa fa-fw fa-sign-out" aria-hidden="true"></i>Logout</a>
         </li>
     </ul>
 
