--- a/public/client/views/admin/forms/fields.view.html
+++ b/public/client/views/admin/forms/fields.view.html
@@ -96,7 +96,7 @@
 
 
 
-        <div id="editField" class="modal fade" role="dialog">
+        <div id="editField" class="modal fade" data-keyboard="false" data-backdrop="static">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
