--- a/public/client/views/partner/partnerCurrSemApp.view.html
+++ b/public/client/views/partner/partnerCurrSemApp.view.html
@@ -1,8 +1,8 @@
-<h3 align="center"><b>Current Semester Applications Details</b></h3>
+<div ng-controller="PartnerController as model">
 
-    <div ng-controller="PartnerController as model">
+    <h3 align="center"><b>Current Semester Applications Details</b></h3>
 
-        <button type="button" class="btn btn-success">Start New Application</button>
+    <button type="button" class="btn btn-success" ng-click="model.startApp()" data-toggle="modal" data-target="#editApp">Start New Application</button>
 
         <table class="table" style="padding-top: 40px">
 
@@ -29,5 +29,68 @@
             </tbody>
         </table>
 
+
+        <div id="editApp" class="modal fade" data-keyboard="false" data-backdrop="static">
+
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss ="modal">&times;</button>
+                        <h4 class="modal-title" align="center"><b>{{model.forms[0].title}}</b></h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <form>
+                            <div ng-model="model.fields">
+
+                                <div ng-repeat="field in model.fields" style="">
+
+                                    <br>
+
+                                    <label ng-style="{'font-size' : field.type == 'LABEL' ? '22px' : '18px','float': 'left'}">{{field.title}}</label>
+                                    <label ng-if="field.subTitle" ng-style="{'font-size' : field.type == 'LABEL' ? '14px' : '12px', 'font-weight': 'normal','float': 'left'}">
+                                        {{field.subTitle}}
+                                    </label>
+
+                                    <br><br>
+                                    <div class="input-group">
+
+                                        <div ng-switch on="field.type" class="pull-left">
+
+                                            <input ng-switch-when="TEXT" type="text" class="form-control">
+
+                                            <textarea ng-switch-when="TEXTAREA"  class="form-control"></textarea>
+
+                                            <select ng-switch-when="OPTIONS" class="form-control">
+                                                <option ng-repeat="option in field.options track by $index">{{option.label}}</option>
+                                            </select>
+
+                                            <div ng-switch-when="CHECKBOXES">
+                                                <div ng-repeat="option in field.options track by $index">
+                                                    <input type="checkbox" value="{{option.value}}">{{option.label}}
+                                                </div>
+                                            </div>
+
+                                            <div ng-switch-when="RADIOS">
+                                                <div ng-repeat="option in field.options track by $index">
+                                                    <input type="radio" value="{{option.value}}">{{option.label}}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button  type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                        <button ng-click="model.commitEdit()" type="button" class="btn btn-success" data-dismiss="modal">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 
