partner form submission completed

--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -3,8 +3,8 @@
     <h4  class="form-signin-heading" style="color:#e21a2d">Welcome Admin :: {{model.currentuser.firstName}}</h4>
 
      <div>
-         <a class="btn btn-primary" type="button" ng-click="model.changeView('Partner')">
-         <!--<a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/adminPartnerList">-->
+         <!--<a class="btn btn-primary" type="button" ng-click="model.changeView('Partner')">-->
+         <a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/adminPartnerList">
             Partner
          </a>
          <a class="btn btn-primary" type="button" ng-click="model.changeView('Faculty')">
