--- a/public/client/views/partner/partner.view.html
+++ b/public/client/views/partner/partner.view.html
@@ -1,7 +1,7 @@
 <div class="header-padding"></div>
 
-<div class="container-fluid" style="margin-top: 20px" ng-controller="PartnerController as model">
-
+<!--<div class="container-fluid" style="margin-top: 20px" ng-controller="PartnerController as model">-->
+<div class="container-fluid" style="margin-top: 20px">
     <div class="row">
 
         <div class="col-xs col-sm col-md-2 col-lg-2 right-line">
