--- a/public/client/views/admin/partnerList.view.html
+++ b/public/client/views/admin/partnerList.view.html
@@ -1,5 +1,5 @@
-<div  ng-controller="PartnerListController as model">
-
+<!--<div  ng-controller="PartnerListController as model">-->
+<div >
 <div id="content" >
     <div id="mainBox" class="textBox">
         <div id="mainMenuBar">
